--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,11 +13,15 @@ set -g status-justify centre
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
-set-option -ga terminal-overrides ',xterm-256color:Tc'
+set-option -sa terminal-overrides ',alacritty:RGB'
+set-option -ga terminal-overrides ',alacritty:Tc'
 
 set-option -g status-position top
 set -g status-style bg=default
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # and now unbind keys
 unbind Up
