structure: moved logic to home to prepare for nixcfg

--- a/home/i3/.config/i3status-rust/config.toml
+++ b/home/i3/.config/i3status-rust/config.toml
@@ -8,9 +8,14 @@ theme = "ctp-latte"
 
 [icons]
 icons = "awesome4"
-[icons.overrides]
-bat = ["|E|", "|_|", "|=|", "|F|"]
-bat_charging = "|^| "
+
+[[block]]
+block = "net"
+format = " $icon {$signal_strength $ssid $frequency} "
+
+[[block]]
+block = "battery"
+format = " $icon $percentage "
 
 [[block]]
 block = "cpu"
