--- a/home/i3/.config/i3/config
+++ b/home/i3/.config/i3/config
@@ -13,7 +13,6 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: DaddyTimeMono Nerd Font Bold 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -197,7 +196,7 @@ client.background       #F8F8F2
 
 bar {
   position top
-  font pango:DaddyTimeMono Nerd Font Bold 10
+  font pango:OpenDyslectic Nerd Font Bold 10
   status_command i3status-rs
   colors {
     background #282A36
