--- a/home/i3/.config/i3/config
+++ b/home/i3/.config/i3/config
@@ -50,7 +50,7 @@ tiling_drag modifier titlebar
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal TODO(Oskar): change $TERMINAL in nix
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec wezterm
 
 # kill focused window
 bindsym $mod+Shift+q kill
