--- a/home/git/.gitconfig
+++ b/home/git/.gitconfig
@@ -1,5 +1,9 @@
-[user]
-	email = oskar.branfeldt@gmail.com
-	name = Oskar Branfeldt
 [alias]
-    st = status
+  st = status
+  # Difftastic aliases, so `git dlog` is `git log` with difftastic and so on.
+  dlog = -c diff.external=difft log --ext-diff
+  dshow = -c diff.external=difft show --ext-diff
+  ddiff = -c diff.external=difft diff
+[merge]
+  conflictStyle = diff3
+  tool = "mergiraf solve"
