--- a/home/sway/.config/sway/config
+++ b/home/sway/.config/sway/config
@@ -8,7 +8,8 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term wezterm
+# set $term wezterm cli spawn --new-window --workspace "$(wezterm cli list-clients --format json | jq -r '.[0].workspace')" || wezterm
+set $term wezterm start --always-new-process
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -167,13 +168,13 @@ exec swaymsg 'workspace "3: slack"; exec slack'
 # builtin
 output "eDP-1" {
     mode 2560x1600@120.001Hz
-    position 0 1440
+    position 0 1234
 }
 
 # monitor at home
 output "GIGA-BYTE TECHNOLOGY CO., LTD. Gigabyte M32U 22421B001957" {
     mode 3840x2160@143.988Hz
-    scale 1.5
+    scale 1.75
     position 0 0
 }
 
@@ -183,7 +184,7 @@ workspace "3: slack" output "eDP-1"
 
 input "type:keyboard" {
    xkb_layout us,se
-   xkb_options ctrl:nocaps
+   xkb_options ctrl:nocaps,grp:lswitch
 }
 
 default_border pixel 2
